--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -62,13 +62,14 @@ h3 {
     }
 }
 
-header{
+.index-head{
     height: 101vh;
     animation: animation 10s ease infinite;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
+
 
 .container{
     max-width: 1100px;
@@ -488,4 +489,8 @@ header{
 .rules .container .box ul li span {
     color: #cd412b;
     text-transform: capitalize;
+}
+
+.fivem-header{
+    background-image: url('../images/fivem.jpg');
 }
